// Original file: proto/reddit.proto


export interface VotePostResponse {
  'postId'?: (number);
  'newScore'?: (number);
  'success'?: (boolean);
  'errorMessage'?: (string);
}

export interface VotePostResponse__Output {
  'postId': (number);
  'newScore': (number);
  'success': (boolean);
  'errorMessage': (string);
}
